--- a/css/whereIsJusto.css
+++ b/css/whereIsJusto.css
@@ -63,6 +63,7 @@ body {
     margin: 0 auto;
     background:#fff;
 }
+
 #header {
     padding: 20px;
     margin-bottom: 30px;
@@ -75,8 +76,41 @@ body {
     color:#fff;
 }
 
+h1 {
+    font-size:28px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+/****************
+page 1
+*****************/
+#side_search {
+    width: 200px;
+    margin-left:30px;
+    float:left;
+}
+
+#tags, #groupname, #picto {
+    width:180px;
+    float:left;
+    margin-left:20px;
+    min-height: 150px;
+}
+
 #form1 {
     width:700px;
-    margin-left:140px;
-    margin-right:140px;
+    float:right;
+    margin-left:50px;
+    min-height: 500px;
+}
+
+#form1 .type{
+    width: 100px;
+    margin: 5px;
+}
+
+#form1 .rows{
+    width: 300px;
+    margin: 5px;
 }
