--- a/css/whereIsJusto.css
+++ b/css/whereIsJusto.css
@@ -50,7 +50,7 @@ table {
 WHERE IS JUSTO 
 *******************************/
 body {
-    background:#ccc;
+    background-color: #E5E8E7;
     font-family: Helvetica, Arial, Verdana, sans-serif;
 }
 
@@ -67,7 +67,7 @@ body {
 #header {
     padding: 20px;
     margin-bottom: 30px;
-    background:#000000;
+    background:#0E685C;
     min-height: 40px;
 }
 #section-title {
@@ -77,7 +77,7 @@ body {
 }
 
 h1 {
-    font-size:28px;
+    font-size:24px;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -87,8 +87,11 @@ page 1
 *****************/
 #side_search {
     width: 200px;
-    margin-left:30px;
     float:left;
+}
+
+#side_search p{
+    line-height: 25px;
 }
 
 #tags, #groupname, #picto {
@@ -98,7 +101,7 @@ page 1
     min-height: 150px;
 }
 
-#form1 {
+#form1, #results {
     width:700px;
     float:right;
     margin-left:50px;
